fix .invisible styles and add lead section for the store.html

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,18 @@
 .mb-5 {margin-bottom: var(--custom-space-5)!important;}
 
 
+.invisible {
+    margin: 0;
+    padding: 0;
+    width: 0;
+    height: 0;
+    font-size: 0;
+    transform: scale(0);
+    position: absolute;
+    background: none;
+}
+
+
 .page {
     color: var(--custom-dark-1);
 }
